--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,11 @@ node_modules
 dist
 dist-ssr
 *.local
-.env*.development
-.env*.production
+.env
+.env.local
+
+.env.development.local
+.env*.production.local
 
 # Editor directories and files
 .vscode/*
