--- a/.gitignore
+++ b/.gitignore
@@ -12,10 +12,10 @@ dist
 dist-ssr
 *.local
 .env
-.env.local
-
 .env.development.local
-.env*.production.local
+.env.test.local
+.env.production.local
+.env.local
 
 # Editor directories and files
 .vscode/*
