--- a/.gitignore
+++ b/.gitignore
@@ -11,11 +11,11 @@ node_modules
 dist
 dist-ssr
 *.local
+
 .env
-.env.development.local
-.env.test.local
-.env.production.local
-.env.local
+.env.development
+.env.test
+.env.production
 
 # Editor directories and files
 .vscode/*
